--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "question"
 version = "0.2.2"
+edition = "2018"
 authors = ["Derek Goddeau <d.j.goddeau@gmail.com>"]
 description = "Library that provides a type for questions and answers."
 documentation = "https://docs.rs/question/"
