Rename build and test stage

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,4 +1,4 @@
-name: Rust
+name: Cargo Build & Test
 
 on:
   push:
@@ -10,8 +10,9 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
+  build-and-test:
 
+    name: Build & Test
     runs-on: ubuntu-latest
 
     steps:
